SFDCProject/src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Change_Order_Reasons__c</fullName>
        <label>Change Order Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Customer initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire setback change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility address change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof type change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased scope of work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product type change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shade modeling change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tilt change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance type change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect usage data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Change_Order_Type__c</fullName>
        <label>Change Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>FINAL INPUTS HYBRID ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RE-SIGNED CONTRACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REVISED EPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Order_With_New_Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CO With New Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate whether or not a change order was created for this customer.</description>
        <label>Change Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Manager_Name__c</fullName>
        <label>Channel Manager Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collect_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <description>[Requested in TG-962, subtask of TG-904]</description>
        <label>Community</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if homeowner has received a competitive quote for a non-SunRun PPA/lease.</description>
        <label>Competitive Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_Amount__c</fullName>
        <label>Conditional Approval Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractual_Generation_Estimate__c</fullName>
        <label>Contractual Generation Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_Logic_Home_Type_on_Title__c</fullName>
        <formula>Opportunity__r.Core_Logic_Land_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Type on Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Logic_Legal_Description__c</fullName>
        <formula>Opportunity__r.Core_Logic_Legal_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Logic Legal Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Stack__c</fullName>
        <label>Cost Stack</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Service_Contract__c</fullName>
        <label>Create Service Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Workflow_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Workflow Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;,  
4, &quot;April&quot;,  
5, &quot;May&quot;,  
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;
)</formula>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Approval_Cycle_Time__c</fullName>
        <formula>(Date_Time_Ops_Received_Proposal_back__c -  Date_Time_Finance_Received_Proposal__c) * 24</formula>
        <label>Credit Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Contact_Credit_Status__c</fullName>
        <formula>Current_Customer_Credit_Report__r.Contact__r.Credit_Decision_on_Portal__c</formula>
        <label>Credit Contact: Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Contact_Full_Name__c</fullName>
        <formula>Current_Customer_Credit_Report__r.Contact__r.FirstName + &quot; &quot; + Current_Customer_Credit_Report__r.Contact__r.LastName</formula>
        <label>Credit Contact: Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Received__c</fullName>
        <formula>Current_Customer_Credit_Report__r.Contact__r.Credit_Received__c</formula>
        <label>Credit Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Record_Associated__c</fullName>
        <formula>IF
(OR(
NOT(ISBLANK(Current_Customer_Credit_Report__c)), 
NOT(ISBLANK(Secondary_Customer_Credit_Report__c)), 
NOT(ISBLANK(Additional_Customer_Credit__c))
),1,0)</formula>
        <label>Credit Record Associated?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Approval from partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional Pass &amp; signed up for ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Approval Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Home - Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed Credit Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid: Full Payment received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Towards_Monthly_Bill__c</fullName>
        <description>For Power Plan, the amount of the upfront that is credited towards the customer&apos;s monthly SunRun payments</description>
        <inlineHelpText>For Power Plan, the amount of the upfront that is credited towards the customer&apos;s monthly SunRun payments</inlineHelpText>
        <label>Credit Towards Monthly Bill</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_memo__c</fullName>
        <label>Credit Memo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Credit_team_notes__c</fullName>
        <label>Credit team notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Customer_Credit_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Customer Credit Report</label>
        <referenceTo>Customer_Credit__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <externalId>true</externalId>
        <label>Customer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Agreement__c</fullName>
        <label>Customer Agreement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Customer_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_Part_1__c</fullName>
        <label>Customer Origination Fee Part 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_Part_2__c</fullName>
        <label>Customer Origination Fee Part 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Origination_Fee_per_Watt__c</fullName>
        <description>Additional sales costs that are factored into the Power Plan price per watt</description>
        <inlineHelpText>Additional sales costs that are factored into the Power Plan price per watt</inlineHelpText>
        <label>Customer Origination Fee per Watt</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Pre_Solar_Bill__c</fullName>
        <description>The annual cost of electricity for the customer over the year before solar.</description>
        <inlineHelpText>The annual cost of electricity for the customer over the year before solar.</inlineHelpText>
        <label>Annual Pre-Solar Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Selected_Sizing__c</fullName>
        <label>Customer Selected Sizing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Sign_Off_Date__c</fullName>
        <label>Customer Sign Off</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Signoff_Date__c</fullName>
        <label>Customer Signoff</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Issued__c</fullName>
        <description>The date the proposal was created</description>
        <label>Date Issued</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Finance_Received_Proposal__c</fullName>
        <label>Date/Time Finance Received Proposal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Ops_Received_Proposal_back__c</fullName>
        <label>Date/Time Ops Received Proposal back</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Pending_Task_Resolved__c</fullName>
        <label>Date/Time Pending Task Resolved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Proposal_in_Pending_Stage__c</fullName>
        <label>Date/Time Proposal in Pending Stage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_SR_Credit_Review__c</fullName>
        <label>Date/Time SR Credit Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_SR_Ops_Received__c</fullName>
        <label>Date/Time SR Ops Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Signoff_Review__c</fullName>
        <label>Date/Time Signoff Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Submitted__c</fullName>
        <label>Date/Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_for_Signoff_since_Submission__c</fullName>
        <formula>If (ISBLANK(SR_Signoff__c), 
(Today () - Date_Submitted__c), 
(DATEVALUE(SR_Signoff__c) -  Date_Submitted__c) 
)</formula>
        <label>Days for Signoff since Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Customer_Signoff_to_Submission__c</fullName>
        <formula>If (ISBLANK(Date_Submitted__c), 
(Today () - DATEVALUE(Customer_Signoff_Date__c)), 
(Date_Submitted__c - DATEVALUE(Customer_Signoff_Date__c)) 
)</formula>
        <label>Days from Customer Signoff to Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>The type of deal proposed to the customer known by the colloquial deal type in-house.</description>
        <inlineHelpText>The type of deal proposed to the customer known by the colloquial deal type in-house.</inlineHelpText>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Total Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golden Ticket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Fee__c</fullName>
        <label>Dealer Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dec_Usage__c</fullName>
        <label>December Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_kWh__c</fullName>
        <description>The total amount of electricity consumed in December pre-solar.</description>
        <label>December kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_Comments__c</fullName>
        <label>Declined Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Declined_Proposal_Reason__c</fullName>
        <label>Declined Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Address Correction Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All customers on title failed credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created from incorrect proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home in LLC, rerun under LLC name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate Sizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate square footage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate system sizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inputs do not match plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inputs do not match shade report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid deal type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid rate schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid title ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Correction Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not an accepted building type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 12 mo usage,Redo with utility bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oversized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product type change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rerun as attached home w/ addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 6mo usage, redo with Sq. Ft. Calc.</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Received_On__c</fullName>
        <label>Deposit Received On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <description>The amount of the deposit due.</description>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Design_Plan_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Plan Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Rate__c</fullName>
        <description>The amount of the discount applied to the rate.</description>
        <label>Discount Rate</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EDP_Phase__c</fullName>
        <label>EDP_Phase</label>
        <picklist>
            <picklistValues>
                <fullName>EDP Phase-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDP Phase-1</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EPC_ID__c</fullName>
        <label>EPC ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC_Price__c</fullName>
        <description>The turnkey price to be paid to the installer.</description>
        <inlineHelpText>The turnkey price to be paid to the installer.</inlineHelpText>
        <label>EPC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC_Price_per_Watt__c</fullName>
        <label>EPC Price per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EPC__c</fullName>
        <label>EPC</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Electricity_Bill_Offset__c</fullName>
        <description>The percentage that the pre-solar electric bill is offset.</description>
        <label>Electricity Bill Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Electronically_Signed_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eSigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost_per_Watt__c</fullName>
        <description>Cost of equipment purchased by SunRun and factored into the Power Plan pricing</description>
        <inlineHelpText>Cost of equipment purchased by SunRun and factored into the Power Plan pricing</inlineHelpText>
        <label>Equipment Cost per Watt</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Summary__c</fullName>
        <label>Equipment Summary</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_change_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment change only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Rate__c</fullName>
        <description>The actual annual escalator for PowerPlan.</description>
        <label>Actual Escalator</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Yr_1_Generation__c</fullName>
        <label>Est Yr 1 Generation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Production__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <formula>System_Size_CEC_AC__c * 1664</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Estimated Annual Production</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Usage__c</fullName>
        <formula>Annual_Pre_Solar_kWh_Usage__c * 1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Annual Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_GAAP_Cost__c</fullName>
        <label>Estimated GAAP Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Increase_in_Usage__c</fullName>
        <formula>Annual_Pre_Solar_kWh_Usage__c * 6/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Increase in Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Mo_Energy_Prod_Of_Facility__c</fullName>
        <description>To be used by Order Management to generate NEM documents through Drawloop.</description>
        <formula>System_Size_CEC_AC__c * 720 * 2/10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be used by Order Management to generate NEM documents through Drawloop.</inlineHelpText>
        <label>Estimated Mo. Energy Prod. Of Facility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Rebate_Amount__c</fullName>
        <label>Estimated Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimation_Method__c</fullName>
        <label>Estimation Method</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Status__c</fullName>
        <label>Exception Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_PTO_Date__c</fullName>
        <label>Expected PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_eMail_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expiration eMail Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sync_Details__c</fullName>
        <label>External Sync Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Sync_InProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Sync InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Sync_Status__c</fullName>
        <label>External Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Synched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Sync_System__c</fullName>
        <label>External Sync System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMV_Valuation_Date__c</fullName>
        <label>FMV Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Usage__c</fullName>
        <label>February Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>February_kWh__c</fullName>
        <description>The total amount of kWh used in February pre-solar.</description>
        <label>February kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Institution__c</fullName>
        <label>Financing Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Program__c</fullName>
        <label>Financing Program</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Term_Length__c</fullName>
        <label>Financing Term Length</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Year_Generation_Estimate__c</fullName>
        <description>The estimated kilowatt hours generated by the system in the first year (this is the number used to calculate pricing)</description>
        <inlineHelpText>The estimated kilowatt hours generated by the system in the first year (this is the number used to calculate pricing)</inlineHelpText>
        <label>Year 1 Production for Pricing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_System_Cost__c</fullName>
        <label>Full_System_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generation_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The generation asset that this proposal was used to issue</description>
        <inlineHelpText>The generation asset that this proposal was used to issue</inlineHelpText>
        <label>Generation Asset</label>
        <referenceTo>Generation_Assets__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Amount__c</fullName>
        <label>Gift Card Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_System_Purchase_Price__c</fullName>
        <description>Gross system purchase price (cash purchase price)</description>
        <inlineHelpText>Gross system purchase price (cash purchase price)</inlineHelpText>
        <label>Gross System Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guaranteed_production_to_date__c</fullName>
        <label>Guaranteed production to date</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <label>HOA</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Appointments__c</fullName>
        <formula>Opportunity__r.Has_Appointments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hawaii_NEM_Approved__c</fullName>
        <formula>Opportunity__r.Hawaii_NEM_Approved__c</formula>
        <label>Hawaii NEM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Roof_Story__c</fullName>
        <label>Highest Roof Story</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Type__c</fullName>
        <label>Home Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detached single family home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertically-split duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Townhome / rowhome</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>